--- a/public/themes/twitter/views/layouts/layout.hbs
+++ b/public/themes/twitter/views/layouts/layout.hbs
@@ -3,11 +3,14 @@
 	<head>
         {{#if result.kb_seo_title}}
         <title>{{result.kb_seo_title}}</title>
+        <meta property="og:title" content="{{result.kb_seo_title}}" />
         {{else}}
         {{#if result.kb_title}}
         <title>{{result.kb_title}}</title>
+        <meta property="og:title" content="{{result.kb_title}}" />
         {{else}}
         <title>{{title}}</title>
+        <meta property="og:title" content="{{title}}" />
         {{/if}}
         {{/if}}
 	    <meta charset="utf-8">
@@ -15,11 +18,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         {{#if result.kb_seo_description}}
 		<meta name="description" content="{{result.kb_seo_description}}">
+        <meta property="og:description" content="{{result.kb_seo_description}}" />
         {{else}}
         {{#if result.kb_body}}
         <meta name="description" content="{{substring (strip_md result.kb_body) 160}}">
+        <meta property="og:description" content="{{substring (strip_md result.kb_body) 160}}" />
         {{else}}
-        <meta name="description" content="Powered by openKB">
+        {{#ifCond homepage '===' true}}
+        <meta name="description" content="{{config.settings.website_description}}">
+        <meta property="og:description" content="{{config.settings.website_description}}" />
+        {{else}}
+        <meta name="description" content="{{__ "Powered by"}} openKB">
+        <meta property="og:description" content="{{__ "Powered by"}} openKB" />
+        {{/ifCond}}
         {{/if}}
         {{/if}}
         {{#if result.kb_keywords}}
@@ -27,6 +38,9 @@
         {{else}}
         <meta name="keywords" content="openKB">
         {{/if}}
+        <meta property="og:type" content="article" />
+        <meta property="og:image" content="{{current_url}}/logo.png" />
+        <meta property="og:url" content="{{fullUrl}}" />
 		<link rel="stylesheet" href="{{app_context}}/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="{{app_context}}/simplemde/simplemde.min.css">
         <link rel="stylesheet" href="{{app_context}}/stylesheets/github.css">
@@ -35,6 +49,7 @@
 		<link rel="stylesheet" href="{{app_context}}/stylesheets/mermaid.css">
 		<link rel="stylesheet" href="{{app_context}}/stylesheets/bootstrap-tokenfield.css">
         <link rel="stylesheet" href="{{app_context}}/stylesheets/jpushmenu.css">
+        <link rel='icon' href='{{app_context}}/favicon.png' />
 		<script src="{{app_context}}/jquery/jquery.min.js"></script>
         <script>{{{state}}}</script>
 		<script src="{{app_context}}/bootstrap/js/bootstrap.min.js"></script>
