--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -51,7 +51,7 @@
 		<link rel="stylesheet" href="{{app_context}}/stylesheets/bootstrap-tokenfield.css">
         <link rel="stylesheet" href="{{app_context}}/stylesheets/jasny-bootstrap.min.css">
         <link rel="stylesheet" href="{{app_context}}/stylesheets/jpushmenu.css">
-        <link rel='icon' href='/favicon.png' />
+        <link rel='icon' href='{{app_context}}/favicon.png' />
 		<script src="{{app_context}}/jquery/jquery.min.js"></script>
         <script>{{{state}}}</script>
 		<script src="{{app_context}}/bootstrap/js/bootstrap.min.js"></script>
