--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -221,6 +221,33 @@
                                 {{__ "Whether to track article versions with each save of the editor"}}.
                             </p>
                         </div>
+												<div class="form-group">
+														<label class="control-label" for="mermaid">{{__ "Allow Mermaid"}}:</label>
+														<select class="form-control" name="mermaid">
+																<option {{select_state config.settings.mermaid true}}>{{__ "true"}}</option>
+																<option {{select_state config.settings.mermaid false}}>{{__ "false"}}</option>
+														</select>
+														<p class="help-block">
+																{{__ "Whether to enable "}} <a href="http://knsv.github.io/mermaid/" target="_blank">mermaid</a>.
+														</p>
+												</div>
+												<div class="form-group">
+														<label class="control-label" for="mathjax">{{__ "Allow MathJax"}}:</label>
+														<select class="form-control" name="mathjax">
+																<option {{select_state config.settings.mathjax true}}>{{__ "true"}}</option>
+																<option {{select_state config.settings.mathjax false}}>{{__ "false"}}</option>
+														</select>
+														<p class="help-block">
+																{{__ "Whether to enable "}} <a href="https://www.mathjax.org/" target="_blank">MathJax</a>.
+														</p>
+												</div>
+												<div class="form-group">
+														<label class="control-label" for="mathjax_input_mode">{{__ "MathJax input mode"}}:</label>
+														<input type="text" class="form-control" name="mathjax_input_mode" value="{{config.settings.mathjax_input_mode}}" required>
+														<p class="help-block">
+																{{__ "Configure the mode MathJax operates in - "}} <a href="http://docs.mathjax.org/en/latest/configuration.html#configuring-mathjax" target="_blank">Configure MathJax</a>.
+														</p>
+												</div>
                     </div>
                     <!-- Article settings -->
 
