--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -1,10 +1,10 @@
 <div class="col-md-12">
-	<div class="row">
-		<div class="col-md-8 col-md-offset-2">
-			<ol class="breadcrumb">
-	  			<li><a href="{{app_context}}/">{{__ "Home"}}</a></li>
-	  			<li class="active">{{__ "Settings"}}</li>
-			</ol>
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <ol class="breadcrumb">
+          <li><a href="{{app_context}}/">{{__ "Home"}}</a></li>
+          <li class="active">{{__ "Settings"}}</li>
+      </ol>
             <ul class="nav nav-tabs" role="tablist" id="settingsTabs">
                 <li role="presentation" class="active"><a href="#website" aria-controls="website" role="tab" data-toggle="tab">{{__ "Website"}}</a></li>
                 <li role="presentation"><a href="#article" aria-controls="article" role="tab" data-toggle="tab">{{__ "Article"}}</a></li>
@@ -100,7 +100,7 @@
                                 {{__ "The theme to use for public facing pages. Leave blank for default"}}.
                             </p>
                         </div>
-						<div class="form-group">
+            <div class="form-group">
                             <label class="control-label" for="show_kb_meta">{{__ "Select a language"}}:</label>
                             <select class="form-control" name="locale">
                                 <option></option>
@@ -221,6 +221,33 @@
                                 {{__ "Whether to track article versions with each save of the editor"}}.
                             </p>
                         </div>
+                        <div class="form-group">
+                            <label class="control-label" for="mermaid">{{__ "Allow Mermaid"}}:</label>
+                            <select class="form-control" name="mermaid">
+                                <option {{select_state config.settings.mermaid true}}>{{__ "true"}}</option>
+                                <option {{select_state config.settings.mermaid false}}>{{__ "false"}}</option>
+                            </select>
+                            <p class="help-block">
+                                {{__ "Whether to enable "}} <a href="http://knsv.github.io/mermaid/" target="_blank">mermaid</a>.
+                            </p>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="mathjax">{{__ "Allow MathJax"}}:</label>
+                            <select class="form-control" name="mathjax">
+                                <option {{select_state config.settings.mathjax true}}>{{__ "true"}}</option>
+                                <option {{select_state config.settings.mathjax false}}>{{__ "false"}}</option>
+                            </select>
+                            <p class="help-block">
+                                {{__ "Whether to enable "}} <a href="https://www.mathjax.org/" target="_blank">MathJax</a>.
+                            </p>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="mathjax_input_mode">{{__ "MathJax input mode"}}:</label>
+                            <input type="text" class="form-control" name="mathjax_input_mode" value="{{config.settings.mathjax_input_mode}}" required>
+                            <p class="help-block">
+                                {{__ "Configure the mode MathJax operates in - "}} <a href="http://docs.mathjax.org/en/latest/configuration.html#configuring-mathjax" target="_blank">Configure MathJax</a>.
+                            </p>
+                        </div>
                     </div>
                     <!-- Article settings -->
 
@@ -253,16 +280,16 @@
                                 {{__ "Shows the view count next to the results on the homepage and search"}}.
                             </p>
                         </div>
-						<div class="form-group">
-							<label class="control-label" for="update_view_count_logged_in">{{__ "Update view count when logged in"}}:</label>
-							<select class="form-control" name="update_view_count_logged_in">
-								<option {{select_state config.settings.update_view_count_logged_in true}}>{{__ "true"}}</option>
-								<option {{select_state config.settings.update_view_count_logged_in false}}>{{__ "false"}}</option>
-							</select>
-							<p class="help-block">
-								{{__ "Updates the view count also when users are logged in"}}.
-							</p>
-						</div>
+            <div class="form-group">
+              <label class="control-label" for="update_view_count_logged_in">{{__ "Update view count when logged in"}}:</label>
+              <select class="form-control" name="update_view_count_logged_in">
+                <option {{select_state config.settings.update_view_count_logged_in true}}>{{__ "true"}}</option>
+                <option {{select_state config.settings.update_view_count_logged_in false}}>{{__ "false"}}</option>
+              </select>
+              <p class="help-block">
+                {{__ "Updates the view count also when users are logged in"}}.
+              </p>
+            </div>
                         <div class="form-group">
                             <label class="control-label" for="show_featured_articles">{{__ "Show featured articles"}}:</label>
                             <select class="form-control" name="show_featured_articles">
@@ -294,6 +321,6 @@
                     <!-- Dislay settings -->
                 </div>
             </form>
-		</div>
-	</div>
+    </div>
+  </div>
 </div>
