Use the langauge file in openKB/locales/
The placeholder for "Search the knowledge base" will now be picked up from the language file.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,7 +6,7 @@
             <div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 search_bar">
         {{/if}}
 			<div class="input-group">
-				<input type="text" name="frm_search" id="frm_search" autocomplete="off" class="form-control input-lg" placeholder="Search the knowledge base">
+				<input type="text" name="frm_search" id="frm_search" autocomplete="off" class="form-control input-lg" placeholder="{{__ "Search the knowledge base"}}">
 				<span class="input-group-btn">
 					<button class="btn btn-success btn-lg" id="btn_search" type="submit">{{__ "Search"}}</button>
 				</span>
