--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -9,7 +9,7 @@
         <title>{{result.kb_title}}</title>
         <meta property="og:title" content="{{result.kb_title}}" />
       {{else}}
-        <title>{{title}}</title>
+        <title>{{config.settings.website_title}}</title>
         <meta property="og:title" content="{{title}}" />
       {{/if}}
     {{/if}}
