--- a/public/themes/twitter/views/kb.hbs
+++ b/public/themes/twitter/views/kb.hbs
@@ -33,7 +33,7 @@
                         <ul class="list-group">
                             {{#each featured_results}}
                                 {{#if this.kb_permalink}}
-                                    <li class="list-group-item"><a href="/{{@root.config.settings.route_name}}kb/{{this.kb_permalink}}">{{this.kb_title}}</a></li>
+                                    <li class="list-group-item"><a href="/{{@root.config.settings.route_name}}/{{this.kb_permalink}}">{{this.kb_title}}</a></li>
                                 {{else}}
                                     <li class="list-group-item"><a href="/{{@root.config.settings.route_name}}/{{this._id}}">{{this.kb_title}}</a></li>
                                 {{/if}}
