Fixed #168 - Added voting to Twitter theme.

--- a/public/themes/twitter/views/kb.hbs
+++ b/public/themes/twitter/views/kb.hbs
@@ -50,6 +50,23 @@
             <div class="body_text">
                 {{{kb_body}}}
             </div>
+            {{#if config.settings.allow_voting}}
+                <div class="row">
+                    <div class="voting text-right col-lg-12">
+                        <span>{{__ "Was this article helpful?"}}</span>
+                        <button id="btnUpvote" class="btn btn-sm btn-default"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></button>
+                        <button id="btnDownvote" class="btn btn-sm btn-default"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></button>
+                        <span>
+                            <strong>{{__ "Votes"}}:</strong>
+                            {{#if result.kb_votes}}
+                                {{result.kb_votes}}
+                            {{else}}
+                                0
+                            {{/if}}
+                        </span>
+                    </div>
+                </div>
+            {{/if}}
             {{#if config.settings.show_kb_meta}}
                 <div class="panel panel-primary" style="margin-top: 35px;">
                     <div class="panel-heading">Article details:</div>
