--- a/public/stylesheets/jpushmenu.css
+++ b/public/stylesheets/jpushmenu.css
@@ -1,157 +1,153 @@
 /* General styles for all menus */
 .cbp-spmenu {
-	background: #f5f8fa;
-	position: fixed;
+    background: #f5f8fa;
+    position: fixed;
     border-left: 2px solid #dce4ec;
     padding: 10px;
 }
 
 .cbp-spmenu-header {
     height: 60px;
-	color: #292f33;
-	font-size: 1.9em;
+    color: #292f33;
+    font-size: 1.9em;
 }
 
-.cbp-spmenu a{
-	display: block;
-	color: #fff;
+.cbp-spmenu a {
+    display: block;
+    color: #fff;
 }
 
-.cbp-spmenu-link{
+.cbp-spmenu-link {
     color: #798d8f;
 }
 
 /* Orientation-dependent styles for the content of the menu */
 
 .cbp-spmenu-vertical {
-	width: 340px;
-	height: 100%;
-	top: 0;
-	z-index: 1000;
+    width: 340px;
+    height: 100%;
+    top: 0;
+    z-index: 1000;
 }
 
 .cbp-spmenu-vertical a {
-	padding: 1em;
+    padding: 1em;
 }
 
 .cbp-spmenu-horizontal {
-	width: 100%;
-	height: 150px;
-	left: 0;
-	z-index: 1000;
-	overflow: hidden;
+    width: 100%;
+    height: 150px;
+    left: 0;
+    z-index: 1000;
+    overflow: hidden;
 }
 
 .cbp-spmenu-horizontal h3 {
-	height: 100%;
-	width: 20%;
-	float: left;
+    height: 100%;
+    width: 20%;
+    float: left;
 }
 
 .cbp-spmenu-horizontal a {
-	float: left;
-	width: 20%;
-	padding: 0.8em;
-	border-left: 1px solid #258ecd;
+    float: left;
+    width: 20%;
+    padding: 0.8em;
+    border-left: 1px solid #258ecd;
 }
 
 /* Vertical menu that slides from the left or right */
 
 .cbp-spmenu-left {
-	left: -340px;
+    left: -340px;
 }
 
 .cbp-spmenu-right {
-	right: -340px;
+    right: -340px;
 }
 
 .cbp-spmenu-left.cbp-spmenu-open {
-	left: 0px;
+    left: 0;
 }
 
 .cbp-spmenu-right.cbp-spmenu-open {
-	right: 0px;
+    right: 0;
 }
 
 /* Horizontal menu that slides from the top or bottom */
 
 .cbp-spmenu-top {
-	top: -150px;
+    top: -150px;
 }
 
 .cbp-spmenu-bottom {
-	bottom: -150px;
+    bottom: -150px;
 }
 
 .cbp-spmenu-top.cbp-spmenu-open {
-	top: 0px;
+    top: 0;
 }
 
 .cbp-spmenu-bottom.cbp-spmenu-open {
-	bottom: 0px;
+    bottom: 0;
 }
 
 /* Push classes applied to the body */
 
 .cbp-spmenu-push {
-	overflow-x: hidden;
-	position: relative;
-	left: 0;
+    overflow-x: hidden;
+    position: relative;
+    left: 0;
 }
 
 .cbp-spmenu-push-toright {
-	left: 340px;
+    left: 340px;
 }
 
 .cbp-spmenu-push-toleft {
-	left: -340px;
+    left: -340px;
 }
 
 /* Transitions */
 
 .cbp-spmenu,
 .cbp-spmenu-push {
-	-webkit-transition: all 0.3s ease;
-	-moz-transition: all 0.3s ease;
-	transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
 
 /* Example media queries */
+@media screen and (max-width: 55.1875em) {
+    .cbp-spmenu-horizontal {
+        font-size: 75%;
+        height: 110px;
+    }
 
-@media screen and (max-width: 55.1875em){
+    .cbp-spmenu-top {
+        top: -110px;
+    }
 
-	.cbp-spmenu-horizontal {
-		font-size: 75%;
-		height: 110px;
-	}
-
-	.cbp-spmenu-top {
-		top: -110px;
-	}
-
-	.cbp-spmenu-bottom {
-		bottom: -110px;
-	}
+    .cbp-spmenu-bottom {
+        bottom: -110px;
+    }
 
 }
+@media screen and (max-height: 26.375em) {
+    .cbp-spmenu-vertical {
+        font-size: 90%;
+        width: 190px;
+    }
 
-@media screen and (max-height: 26.375em){
+    .cbp-spmenu-left,
+    .cbp-spmenu-push-toleft {
+        left: -190px;
+    }
 
-	.cbp-spmenu-vertical {
-		font-size: 90%;
-		width: 190px;
-	}
+    .cbp-spmenu-right {
+        right: -190px;
+    }
 
-	.cbp-spmenu-left,
-	.cbp-spmenu-push-toleft {
-		left: -190px;
-	}
-
-	.cbp-spmenu-right {
-		right: -190px;
-	}
-
-	.cbp-spmenu-push-toright {
-		left: 190px;
-	}
+    .cbp-spmenu-push-toright {
+        left: 190px;
+    }
 }
