--- a/views/import.hbs
+++ b/views/import.hbs
@@ -1,17 +1,16 @@
 <div class="col-md-12">
-	<div class="row">
-		<div class="col-md-6 col-md-offset-3">
-			<ol class="breadcrumb">
-	  			<li><a href="/">Home</a></li>
-	 			<li class="active">Import</li>
-			</ol>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <ol class="breadcrumb">
+                <li><a href="/">Home</a></li>
+                <li class="active">Import</li>
+            </ol>
             <h1 class="file-form">Import</h1>
-			<div class="col-md-12">
+            <div class="col-md-12">
                 <p class="text-muted">
-                   You are able to bulk import articles by uploading a Zip file containing files with Markdown content. When new articles are created, the name of the file will become
-                   the title/permalink. All imported articles will be set to a draft status.
+                    You are able to bulk import articles by uploading a Zip file containing files with Markdown content. When new articles are created, the name of the file will become the title/permalink. All imported articles will be set to a draft status.
                 </p>
-				<form class="form-horizontal" role="form" method="post" action="/importer" enctype="multipart/form-data">
+                <form class="form-horizontal" role="form" method="post" action="/importer" enctype="multipart/form-data">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="fileinput fileinput-new" data-provides="fileinput">
@@ -26,8 +25,8 @@
                             </div>
                         </div>
                     </div>
-				</form>
-			</div>
-		</div>
-	</div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
