Fix #171 - Moving to a stored Lunr index and upgrading to latest version (2.0.4).

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -78,7 +78,7 @@
     <script src="{{app_context}}/javascripts/jasny-bootstrap.min.js"></script>
     <script src="{{app_context}}/markdown-it/markdown-it.min.js"></script>
     {{#ifCond config.settings.typeahead_search '===' true}}
-      <script src="{{app_context}}/lunr/lunr.min.js"></script>
+      <script src="{{app_context}}/lunr/lunr.js"></script>
     {{/ifCond}}
     <script src="{{app_context}}/javascripts/jpushmenu.js"></script>
     <script src="{{app_context}}/javascripts/openKB.js"></script>
