updated url for openKB on twitter theme

--- a/public/themes/twitter/views/layouts/layout.hbs
+++ b/public/themes/twitter/views/layouts/layout.hbs
@@ -94,7 +94,7 @@
     {{#if show_footer}}
       <footer class="footer">
         <div class="container">
-          <p class="text-muted text-center">{{__ "Powered by"}} <a href="http://openkb.mrvautin.com/" target="_blank">openKB</a></p>
+          <p class="text-muted text-center">{{__ "Powered by"}} <a href="https://openkb.markmoffat.com/" target="_blank">openKB</a></p>
         </div>
       </footer>
     {{/if}}
