* reading google sso settings from config.json * added "Login with Google" button

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -51,6 +51,7 @@
     <link rel="stylesheet" href="{{app_context}}/stylesheets/bootstrap-tokenfield{{config.settings.env}}.css">
     <link rel="stylesheet" href="{{app_context}}/stylesheets/jasny-bootstrap.min.css">
     <link rel="stylesheet" href="{{app_context}}/stylesheets/jpushmenu{{config.settings.env}}.css">
+    <link rel="stylesheet" href="{{app_context}}/stylesheets/sso.css">
     <link rel='icon' href='{{app_context}}/favicon.png' />
     <script src="{{app_context}}/jquery/jquery.min.js"></script>
     <script>{{{state}}}</script>
