--- a/views/login.hbs
+++ b/views/login.hbs
@@ -11,3 +11,9 @@
 		<button class="btn btn-lg btn-primary btn-block" type="submit">{{__ "Sign in"}}</button>
 	</form>
 </div>
+
+<div class="col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4" style="padding-top: 50px" >
+	<a id="login_button_google" class="btn btn-block btn-giant btn-primary" href="{{app_context}}/auth/google">
+		<i class="fa fa-google" aria-hidden="true"></i>&nbsp;&nbsp;Login with Google
+	</a>
+</div>
