twitter theme fix
correct issue where row was pushing page to the right.

--- a/public/themes/twitter/views/index.hbs
+++ b/public/themes/twitter/views/index.hbs
@@ -29,7 +29,7 @@
         <p class="subheading">Get instant answers for the most common questions and learn how to use 140 characters like a pro.</p>
     </div>
 </div>
-<div class="row">
+<div>
     {{#if config.settings.show_featured_articles}}
         <div class="row featuredArticles">
             <div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
