add i18n for 'Visible state' and its states

--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -92,10 +92,10 @@
                     </div>
                 </li>
                 <li class="list-group-item">
-                    <label>Visible state</label>
+                    <label>{{__ "Visible state"}}</label>
                     <select class="form-control" id="frm_kb_visible_state" name="frm_kb_visible_state">
-                        <option {{select_state result.kb_visible_state 'public'}} value="public">Public</option>
-                        <option {{select_state result.kb_visible_state 'private'}} value="private">Private</option>
+                        <option {{select_state result.kb_visible_state 'public'}} value="public">{{__ "Public"}}</option>
+                        <option {{select_state result.kb_visible_state 'private'}} value="private">{{__ "Private"}}</option>
                     </select>
                 </li>
                 <li class="list-group-item">
