--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,11 @@
 <div class="row">
 	<form action="{{app_context}}/search" id="search_form" method="post">
 		{{#if config.settings.show_featured_articles}}
+			{{#ifCond routeType '===' 'topic'}}
+			<div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 search_bar">
+			{{else}}
 			<div class="col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 search_bar">
+			{{/ifCond}}
 		{{else}}
 			<div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 search_bar">
 		{{/if}}
@@ -21,11 +25,13 @@
 </div>
 <div class="row">
 	{{#if config.settings.show_featured_articles}}
-		{{#ifCond routeType '===' 'search'}}
+		{{#ifCond routeType '===' 'topic'}}
+			<div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+		{{else}}
 			<div class="col-md-2 col-md-offset-1 col-lg-2 col-lg-offset-1">
-				<div style="margin-top: 30px;">
-					<ul class="list-group">
-						<li class="list-group-item list-group-heading">{{__ "Featured articles"}}</li>
+			<div style="margin-top: 30px;">
+				<ul class="list-group">
+					<li class="list-group-item list-group-heading">{{__ "Featured articles"}}</li>
 						{{#each featured_results}}
 							{{#if this.kb_permalink}}
 								<li class="list-group-item"><h5><a href="{{app_context}}/{{@root.config.settings.route_name}}/{{this.kb_permalink}}">{{this.kb_title}}</a></h5></li>
@@ -36,8 +42,8 @@
 					</ul>
 				</div>
 			</div>
-		{{/ifCond}}
 		<div class="col-md-8 col-lg-8">
+		{{/ifCond}}
 	{{else}}
 		<div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
 	{{/if}}
@@ -95,28 +101,28 @@
 				<ul class="list-group">
 					<li class="list-group-item list-group-heading">{{__ "Top articles"}}</li>
 					{{#each top_results}}
-							<li class="list-group-item">
-								<h5>
-								{{#if kb_permalink}}
-									<a href="{{app_context}}/{{@root.config.settings.route_name}}/{{this.kb_permalink}}">{{this.kb_title}}</a>
-								{{else}}
-									<a href="{{app_context}}/{{@root.config.settings.route_name}}/{{this._id}}">{{this.kb_title}}</a>
-								{{/if}}
-								{{#if @root.config.settings.show_published_date}}
-									{{#if @root.config.settings.show_view_count}}
-										<span class="pull-right view_count">&nbsp; / <strong>{{__ "Date"}}:</strong> {{format_date this.kb_published_date}}</span>
-									{{else}}
-										<span class="pull-right view_count"><strong>{{__ "Date"}}:</strong> {{format_date this.kb_published_date}}</span>
-									{{/if}}
-								{{/if}}
+						<li class="list-group-item">
+							<h5>
+							{{#if kb_permalink}}
+								<a href="{{app_context}}/{{@root.config.settings.route_name}}/{{this.kb_permalink}}">{{this.kb_title}}</a>
+							{{else}}
+								<a href="{{app_context}}/{{@root.config.settings.route_name}}/{{this._id}}">{{this.kb_title}}</a>
+							{{/if}}
+							{{#if @root.config.settings.show_published_date}}
 								{{#if @root.config.settings.show_view_count}}
-									<span class="pull-right view_count"><strong>{{__ "View count"}}:</strong> {{view_count this.kb_viewcount}}</span>
+									<span class="pull-right view_count">&nbsp; / <strong>{{__ "Date"}}:</strong> {{format_date this.kb_published_date}}</span>
+								{{else}}
+									<span class="pull-right view_count"><strong>{{__ "Date"}}:</strong> {{format_date this.kb_published_date}}</span>
 								{{/if}}
-								{{#if this.kb_password}}
-									<span class="pull-right view_count" style="padding-right: 5px;"><i class="fa fa-key"></i></span>
-								{{/if}}
-								</h5>
-							</li>
+							{{/if}}
+							{{#if @root.config.settings.show_view_count}}
+								<span class="pull-right view_count"><strong>{{__ "View count"}}:</strong> {{view_count this.kb_viewcount}}</span>
+							{{/if}}
+							{{#if this.kb_password}}
+								<span class="pull-right view_count" style="padding-right: 5px;"><i class="fa fa-key"></i></span>
+							{{/if}}
+							</h5>
+						</li>
 					{{/each}}
 				</ul>
 			</div>
