Added support for platuml using markdown-it-platuml

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -69,6 +69,7 @@
         <script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config={{config.settings.mathjax_input_mode}}"></script>
     {{/ifCond}}
     <script src="{{app_context}}/javascripts/markdown-it-classy{{config.settings.env}}.js"></script>
+    <script src="{{app_context}}/javascripts/markdown-it-plantuml{{config.settings.env}}.js"></script>
     <script src="{{app_context}}/javascripts/bootstrap-tokenfield.min.js"></script>
     <script src="{{app_context}}/javascripts/inline-attachment{{config.settings.env}}.js"></script>
     <script src="{{app_context}}/javascripts/codemirror.inline-attachment.js"></script>
